--- a/Components/Friend/Chat/Chat.module.css
+++ b/Components/Friend/Chat/Chat.module.css
@@ -1,35 +1,43 @@
 
 .Chat{
-    padding: 2rem;
+    padding-left: 0.3rem;
+    padding-right: 0.3rem;
+    padding-top: 0.3rem;
     background-color: rgba(0,0,0,0.25);
     border-radius: .5rem;
     overflow-y: scroll;
+    border: #f5e1cb;
+    border-style: groove;
 }
 
 .Chat_box{
     display: grid;
     grid-template-columns: 1fr;
     height: 50vh;
-    width: 80%;
+    width: 90%;
+    
     margin:  0 auto;
     overflow-y: scroll;
 }
 
 .Chat_box_right p,
 .Chat_box_left p{
-    background-color: #039af15b;
-    padding: 1rem;
+    background-color: #03f17e5b;
+    padding: 0.5rem;
     border-top-right-radius: .5rem;
     border-top-left-radius: .5rem;
     border-bottom-left-radius: .5rem;
+    border-bottom-right-radius: .5rem;
     position: relative;
+    margin: .6rem;
+    
 }
 
 .Chat_box_left_title{
     display: flex;
     align-items: center;
-    gap: 1rem;
-    font-size: 1rem;
+    gap: 0.4rem;
+    font-size: 0.8rem;
 }
 
 .Chat_box_send_img{
@@ -51,7 +59,9 @@
 .Chat_user_info{
     display: flex;
     align-items: center;
-    gap: 2rem;
+    gap: 1rem;
+    border-bottom: 1px solid#f5e1cb;
+    
     line-height: 1;
 }
 
