--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,7 +8,7 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 
   font-family: 'Roboto', sans-serif;
-  background-color: #1bacd0a0;
+  background-color: #000000;
   color: #000000;
 }
 
