--- a/Components/Friend/Chat/Chat.module.css
+++ b/Components/Friend/Chat/Chat.module.css
@@ -7,14 +7,16 @@
     border-radius: .5rem;
     overflow-y: scroll;
     border: #f5e1cb;
+    text-transform: capitalize;
     border-style: groove;
 }
 
 .Chat_box{
     display: grid;
     grid-template-columns: 1fr;
-    height: 50vh;
+    height: 45vh;
     width: 90%;
+    
     
     margin:  0 auto;
     overflow-y: scroll;
@@ -29,14 +31,14 @@
     border-bottom-left-radius: .5rem;
     border-bottom-right-radius: .5rem;
     position: relative;
-    margin: .6rem;
+    margin: .4rem;
     
 }
 
 .Chat_box_left_title{
     display: flex;
     align-items: center;
-    gap: 0.4rem;
+    gap: .1rem;
     font-size: 0.8rem;
 }
 
@@ -44,15 +46,17 @@
     display: flex;
     align-items: center;
     gap: 1rem;
+    margin-bottom: .5rem;
 }
 
 .Chat_box_send_img input{
     width: 100%;
-    background-color: #f182035b;
+    background-color: #b7d5b45b;
     outline: none;
     border: none;
     padding: 1rem;
-    color: #f18203;
+    
+    color: #ffffff;
     border-radius: .5rem;
 }
 
