--- a/Components/Friend/Friend.module.css
+++ b/Components/Friend/Friend.module.css
@@ -2,18 +2,21 @@
 .Friend{
     width: 80%;
     margin: 1rem auto;
+    text-transform: capitalize;
 }
 
 .Friend_box{
     display: grid;
     grid-template-columns: 1.4fr 3fr;
     gap: 2rem;
+    
 }
 
 .Friend_box_left{
     background-color: rgba(0,0,0,0.25);
     padding: 1rem;
     border-radius: .5rem;
+    border: solid white;
 }
 
 @media only screen and (max-width: 35em) {
