next removed from gitignore

--- a/Components/NavBar/NavBar.module.css
+++ b/Components/NavBar/NavBar.module.css
@@ -29,7 +29,7 @@
     color:  #ff9100;
     border-bottom: 2px solid #ff9100;
     padding-bottom: .4rem;
-    
+}
 
 .NavBar_box_right_connect{
     display: flex;
